add exercises to workout card

--- a/pub/scss/base/_helpers.scss
+++ b/pub/scss/base/_helpers.scss
@@ -9,6 +9,14 @@
 	padding: 0 !important;
 }
 
+.no-pad-left {
+	padding-left: 0 !important;
+}
+
+.no-pad-right {
+	padding-right: 0 !important;
+}
+
 .text-right {
 	text-align: right !important;
 }
