--- a/pub/scss/base/_globals.scss
+++ b/pub/scss/base/_globals.scss
@@ -37,11 +37,33 @@ img.aligncenter {
 	margin-right: auto; 
 }
 
-h1, 
-h2, 
-h3, 
-h4, 
-h5, 
-h6 {
-	margin: 0;
+#wpbb-workout-inner {
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6,
+	p{
+		margin: 0;
+		padding: 0;
+	}
+
+	h2 {
+		font-size: 21px;
+		line-height: 24px;
+		color: $h2Grey;
+	}
+
+	h3 {
+		font-size: 30px;
+		color: $h3Grey;
+	}
+
+	p {
+		font-size: 12px;
+		color: $pGrey;
+		font-weight: 200;
+	}
 }
