--- a/pub/scss/base/_variables.scss
+++ b/pub/scss/base/_variables.scss
@@ -1,10 +1,15 @@
 /* Variables ------ */
 
 //Colors
-$white:#fff;
-$black:#000;
-$border: #d1d1d1;
+$white   : #fff;
+$black   : #000;
+$border  : #e5e5e5;
+$grey    : #bec4c3;
+$h2Grey  : #959999;
+$h3Grey  : #d1cccc;
+$pGrey   : #a3a8a8;
+$shadow  : #e0dede;
+$star    : #969393;
 
 
-
-	//Font stacks
+//Font stacks
