--- a/pub/scss/base/_variables.scss
+++ b/pub/scss/base/_variables.scss
@@ -5,11 +5,14 @@ $white   : #fff;
 $black   : #000;
 $border  : #e5e5e5;
 $grey    : #bec4c3;
+$darkGrey: #6a706f;
 $h2Grey  : #959999;
 $h3Grey  : #d1cccc;
+$h4Grey  : #868e8e;
 $pGrey   : #a3a8a8;
 $shadow  : #e0dede;
 $star    : #969393;
+$ol      : #7c8484;
 
 
 //Font stacks
