--- a/pub/scss/base/_globals.scss
+++ b/pub/scss/base/_globals.scss
@@ -61,9 +61,28 @@ img.aligncenter {
 		color: $h3Grey;
 	}
 
+	h4 {
+		color: $h4Grey;
+		font-size:22px;
+		font-weight:400;
+	}
+
 	p {
 		font-size: 12px;
 		color: $pGrey;
 		font-weight: 200;
+	}
+
+	ol {
+		margin-left: 3px;
+
+		li {
+			font-weight: 200;
+			padding-top: 2px;
+			padding-bottom: 2px;
+			font-size: 12px;
+			line-height: 20px;
+			color: $star;
+		}
 	}
 }
