fix admin side ux

--- a/admin/scss/areas/post-exercise.scss
+++ b/admin/scss/areas/post-exercise.scss
@@ -1,21 +1,39 @@
 /* Post Exercise ------------- */
 
+.exercise-title {
+	margin-top: 20px;
+}
+
 #exercise-list {
+
+	label {
+		display: block;
+	}
+
 	input {
 		margin-right: 10px;
+		display: block;
 		height:30px;
 	}
 
+	.rep-input {
+		margin-left: -7%;
+	}
+
+	.rest-input {
+		margin-left: -7%;
+	}
+
 	#sets {
-		width: 10%;
+		width: 70%;
 	}
 
 	#reps {
-		width: 22%;
+		width: 70%;
 	}
 
 	#rest {
-		width: 27%;
+		width: 70%;
 	}
 }
 
@@ -43,19 +61,39 @@
 }
 
 .remove-exercise {
+	position: absolute;
 	text-decoration: none;
-	background: red;
-	color: white;
-	padding: 9px;
-	padding-top: 3px;
-	padding-bottom: 6px;
-	border-radius: 25%;
+	width: 24px;
+	height: 24px;
+	border: none;
+	margin: 23px 0 0 -41px;
+	padding: 0;
+	background: 0 0;
+	cursor: pointer;
+	text-indent: 0;
 
-	&:hover{
-		background: white;
-		border: solid 1px red;
-		color: red;
+	&:before {
+		background: 0 0;
+		color: $wp-blue;
+		content: "\f153";
+		display: block;
+		font: 400 16px/20px dashicons;
+		speak: none;
+		height: 20px;
+		text-align: center;
+		width: 20px;
+		-webkit-font-smoothing: antialiased;
 	}
+
+	&:hover {
+		&:before {
+			color: $wp-red;
+		}
+	}
+}
+
+a.day-repeat-add.button {
+	margin-top: 10px;
 }
 
 #poststuff .inside {
