--- a/pub/scss/areas/_workout-card.scss
+++ b/pub/scss/areas/_workout-card.scss
@@ -1,185 +1,115 @@
 /* Workout card ------ */
-.wpbb-workout {
-	padding: 38px 28px;
-	border: 1px solid $border;
-}
+#wpbb-workout-card {
+	margin-top: 100px;
+	padding: 0 32px;
+	position: relative;
 
-#averages {
-	margin: 40px 0;
-	text-align: center;
-
-	h5 {
-		font-weight: 200;
-		font-size: 10px;
-		color: $grey;
-	}
-
-	.avg-time {
-		margin-bottom: 14px;
-	}
-}
-
-.description {
-	margin-bottom: 20px;
-
-	p {
-		line-height: 20px !important;
-		color: $star !important;
-	}
-}
-
-.exercises {
-
-	.day-title {
-		border-bottom: 1px solid $grey;
-	}
-
-	.exercise {
-		padding: 20px 0;
-		position: relative;
-	}
-
-	h4 {
-		margin-bottom: 20px !important;
-		font-size: 18px !important;
-		color: $darkGrey !important;
-		font-weight: 800;
-	}
-}
-
-.sets {
-	margin-top: 7px;
-	padding-left: 40px;
-
-	@media( max-width: 767px ) {
-		margin-top: 20px;
+	.jq-ry-container {
 		padding-left: 0;
 	}
 
-	p {
-		font-size: 14px;
-		margin: 6px 0 !important;
+	.save-button {
+		position: absolute;
+		top: -44px;
+		right: 0;
+		@extend %boxShadow;
 
-		span {
-			font-weight: 600;
+		.save-btn {
+
 		}
 	}
 }
 
-.rating-meta {
-	margin-top: 5px;
+%headerP {
+	font-size: 13px !important;
+	color: $darkGrey !important;
+	font-weight: 600 !important;
+
+	span {
+		font-weight: 400;
+	}
+}
+
+.wpbb-workout {
+	border: 1px solid $border;
+
+	header {
+		margin-top: 80px;
+
+		h2 {
+			margin-bottom: 22px !important;
+		}
+
+		p {
+			@extend %headerP;
+		}
+	}
+
+	#averages {
+		margin-top: 25px;
+
+		p {
+			@extend %headerP;
+		}
+	}
 }
 
 #wpbb-workout-inner {
-	h2 {
-		margin-bottom: 4px;
+	margin-top: 40px;
+}
+
+.workout-content {
+	h3 {
+		margin-bottom: 28px !important;
 	}
 
-	header {
-		.jq-ry-container {
-			margin-top: 10px;
-			padding-left: 0;
-		}
+	p {
+		color: $darkGrey;
+		font-size: 14px;
+		font-weight: 400 !important;
+	}
+
+	.description {
+		margin-bottom: 40px;
 	}
 }
 
-#workout-img {
-	margin-bottom: 9px;
-	box-shadow: $shadow 6px 6px 4px;
+#rating-wrap {
+	margin-top: -53px;
+
+	.rating-meta {
+		margin-top: -2px;
+		text-align: center;
+	}
 }
 
-.instruction-popup {
-	display: none;
-	position: absolute;
-	left:0;
-	right:0;
-	margin: auto;
-	width: 90%;
-	height: 90%;
-	background-color: $star;
-	opacity: .8;
-	border-radius: 8px;
+%boxShadow {
+	box-shadow: 15px 11px 30px $imgShadow !important;
+}
 
-	ul {
-		margin: 30px 40px;
-		li {
-			color: $white;
-			font-size: 12px;
-		}
+.workout-image-wrapper {
+	margin-top: -12px;
+	text-align: right;
+
+	#workout-img {
+		position: relative;
+		@extend %boxShadow;
 	}
-
 }
 
 /* Buttons ----- */
+.blue-btn {
+	padding: 11px 24px 10px;
+	text-decoration: none;
+	box-shadow: none !important;
+	background: $blue;
+	transition: background .25s !important;
+	color: $white;
+	text-transform: uppercase;
+	font-size: 11px;
 
-.close-button {
-	.close-btn {
-		padding: 3px 15px;
-		margin-top: 5px;
-		margin-right: 10px;
-		padding: 3px 8px;
-		font-size: 10px;
-		background-color: $black;
-		border-radius: 50px;
-		text-decoration: none !important;
-		box-shadow: none !important;
-		color: $white;
-		float: right;
-		cursor: pointer;
-
-		&:hover {
-			color: $white;
-		}
-	}
-}
-
-.instruction-button {
-	.instruction-btn {
-		padding: 3px 15px;
-		text-decoration: none;
-		font-size: 10px;
-		border-radius: 2px;
-		box-shadow: none;
-		color: white;
-		border: 1px solid $grey;
-		background: $star;
-		font-weight: 200;
-		border: none;
-		cursor: pointer;
-
-		&:hover {
-			opacity: .8;
-			color: white;
-			background: $star;
-			border-radius: 2px;
-			box-shadow: none;
-			border: none;
-		}
-	}
-}
-
-.save-button {
-	margin-top: 5px;
-
-	.save-btn {
-		padding: 3px 15px;
-		text-decoration: none;
-		font-size: 10px;
-		border-radius: 2px;
-		box-shadow: none;
-		color: white;
-		border: 1px solid $grey;
-		background: $star;
-		font-weight: 200;
-		border: none;
-
-		&:hover {
-			opacity: .8;
-			color: white;
-			background: $star;
-			border-radius: 2px;
-			box-shadow: none;
-			border: none;
-		}
+	&:hover {
+		color: $white !important;
+		background: $grey;
 	}
 }
