--- a/pub/scss/base/_variables.scss
+++ b/pub/scss/base/_variables.scss
@@ -1,18 +1,20 @@
 /* Variables ------ */
 
 //Colors
-$white     : #fff;
-$black     : #000;
-$border    : #e4e4e4;
-$darkBlue  : #13547a;
-$blue      : #13547a;
-$lightBlue : #dae4e7;
-$shadow    : #dae4e7;
-$darkGrey  : #3c4a50;
-$medGrey   : #505c61;
-$grey      : #979ea2;
-$p         : #636e73;
-$imgShadow : #e4e4e4;
+$white        : #fff;
+$black        : #000;
+$border       : #e4e4e4;
+$darkBlue     : #13547a;
+$blue         : #13547a;
+$lightBlue    : #dae4e7;
+$borderA      : #7c96aa;
+$shadow       : #dae4e7;
+$darkGrey     : #3c4a50;
+$medGrey      : #505c61;
+$grey         : #979ea2;
+$p            : #636e73;
+$imgShadow    : #e4e4e4;
+$gradientBase : #f5f6f6;
 
 
 //Font stacks
