--- a/pub/scss/base/_globals.scss
+++ b/pub/scss/base/_globals.scss
@@ -44,7 +44,7 @@ img.aligncenter {
 	h4,
 	h5,
 	h6,
-	p{
+	p {
 		margin: 0;
 		padding: 0;
 	}
@@ -59,14 +59,16 @@ img.aligncenter {
 
 	h3 {
 		font-size: 17px;
-		text-transform: uppercase;
-		color: $blue;
-		font-weight: 200;
+		text-transform: uppercase !important;
+		color: $blue !important;
+		font-weight: 600 !important;
 	}
 
 	h4 {
-		font-size:22px;
-		font-weight:400;
+		font-size:16px !important;
+		font-weight:600 !important;
+		text-transform: uppercase !important;
+		color: $blue !important;
 	}
 
 	p {
@@ -76,14 +78,46 @@ img.aligncenter {
 	}
 
 	ol {
-		margin-left: 3px;
+		margin-left: 0 !important;
+		margin-bottom: 0 !important;
+		padding-left:47px !important;
+		display: block;
+		list-style: none;
+		counter-reset: numList;
+		position:relative;
 
 		li {
-			font-weight: 200;
-			padding-top: 2px;
-			padding-bottom: 2px;
-			font-size: 12px;
-			line-height: 20px;
+			margin-bottom: 10px !important;
+			font-weight: 200 !important;
+			padding-top: 2px !important;
+			padding-bottom: 2px !important;
+			font-size: 15px !important;
+			line-height: 30px !important;
+			color: $darkGrey !important;
+
+			&:before {
+				counter-increment: numList;
+				content: counter(numList);
+				float: left;
+				position: absolute;
+				margin-top: 0;
+				left: 0;
+				box-shadow: 6px 6px 28px $grey;
+				font-size: 18px;
+				font-weight:500;
+				text-align: center;
+				background-color: $blue;
+				color: $white;
+				width: 30px;
+				height: 30px;
+				line-height: 32px;
+			}
 		}
+	}
+
+	a {
+		text-decoration: none !important;
+		box-shadow: none !important;
+		color: $white !important;
 	}
 }
