--- a/pub/scss/base/_helpers.scss
+++ b/pub/scss/base/_helpers.scss
@@ -17,6 +17,14 @@
 	padding-right: 0 !important;
 }
 
+.pl-15 {
+	padding-left: 15px !important;
+}
+
+.pr-15 {
+	padding-right: 15px !important;
+}
+
 .text-right {
 	text-align: right !important;
 }
@@ -29,11 +37,16 @@
 	text-align: left !important;
 }
 
-.fat-border {
-	border-bottom: 5px solid #000;
+.float-right {
+	float: right !important;
 }
 
-.med-border {
-	border-bottom: 2px solid #000;
+.float-left {
+	float: left !important;
+}
+
+.gradient {
+	background: linear-gradient( $white, $gradientBase );
+	height: 43px;
 }
 
