workout card styles and js

--- a/pub/scss/base/_globals.scss
+++ b/pub/scss/base/_globals.scss
@@ -118,6 +118,6 @@ img.aligncenter {
 	a {
 		text-decoration: none !important;
 		box-shadow: none !important;
-		color: $white !important;
+		color: $white;
 	}
 }
