--- a/pub/scss/areas/_workout-card.scss
+++ b/pub/scss/areas/_workout-card.scss
@@ -5,12 +5,13 @@
 	position: relative;
 
 	.jq-ry-container {
+		margin-top: 5px;
 		padding-left: 0;
 	}
 
 	.save-button {
 		position: absolute;
-		top: -44px;
+		top: -2.8%;
 		right: 0;
 		@extend %boxShadow;
 	}
@@ -37,7 +38,7 @@
 }
 
 #rating-wrap {
-	margin-top: -53px;
+	margin-top: -11%;
 	padding: 0 30px;
 
 	#rating {
@@ -106,12 +107,11 @@
 	}
 
 	.day-title h3 {
-		margin-bottom: 24px !important;
 		font-size: 25px !important;
 	}
 
-	#single-exercise {
-		margin-bottom: 26px;
+	.single-exercise {
+		margin-top: 26px;
 		padding: 0 30px !important;
 
 		.single-exercise-inner {
@@ -124,8 +124,9 @@
 
 	.sets {
 		padding-left: 10px;
+		padding-top: 16px;
 
-		#instructions {
+		.instructions {
 			top: 0;
 
 			a {
@@ -138,27 +139,45 @@
 
 				&:before {
 					padding-right: 10px;
-					vertical-align: -11%;
+					vertical-align: -17%;
 					content: url('../../assets/img/instructions-icon.png');
 				}
 			}
 		}
 
 		.reps-wrap {
-			margin-top: 34px;
+			margin-top: 14px;
 		}
 
 		p span,
 		p {
 			color: $darkGrey !important;
-			font-size: 14px !important;
+			font-size: 12px !important;
 			font-weight: 400 !important;
 		}
 	}
 }
 
-.instruction-popup {
+.popup-wrap {
 	display: none;
+}
+
+.instruction-popup {
+	padding: 15px;
+	background: $blue;
+	width: 100%;
+
+	ul {
+		padding-left: 15px;
+		li {
+			font-size: 12px;
+			color: $white !important;
+		}
+	}
+
+	.close-button {
+		text-align: right;
+	}
 }
 
 /* Buttons ----- */
@@ -175,5 +194,20 @@
 	&:hover {
 		color: $white !important;
 		background: $grey;
+	}
+}
+
+.close-btn {
+	font-size: 14px;
+	cursor: pointer;
+
+	span {
+		border-bottom: 1px solid $white;
+	}
+
+	&:before {
+		padding-right: 5px;
+		vertical-align: -11%;
+		content: url('../../assets/img/close-icon.png');
 	}
 }
