add rating to bottom of card

--- a/pub/scss/areas/_workout-card.scss
+++ b/pub/scss/areas/_workout-card.scss
@@ -189,6 +189,22 @@
 	}
 }
 
+#rate-it {
+	padding: 30px 30px 20px;
+
+	h3 {
+		line-height: 14px;
+	}
+
+	p {
+		font-weight: 400;
+	}
+
+	.jq-ry-container {
+		margin-top: -6px;
+	}
+}
+
 /* Buttons ----- */
 .blue-btn {
 	padding: 11px 24px 10px;
