header responsive styles

--- a/pub/scss/base/_globals.scss
+++ b/pub/scss/base/_globals.scss
@@ -118,5 +118,6 @@ img.aligncenter {
 		text-decoration: none !important;
 		box-shadow: none !important;
 		color: $white;
+		border-bottom: none;
 	}
 }
