--- a/pub/scss/areas/_workout-card.scss
+++ b/pub/scss/areas/_workout-card.scss
@@ -14,6 +14,24 @@
 		top: -2.8%;
 		right: 0;
 		@extend %boxShadow;
+
+		@media( max-width: 900px ) {
+			top: -2.4%;
+		}
+
+		@media( max-width: 825px ) {
+			top: -2%;
+		}
+
+		@media( max-width: 600px ) {
+			top: -1.8%;
+		}
+
+		.save-btn {
+			@media( max-width: 550px ) {
+				font-size: 9px !important;
+			}
+		}
 	}
 
 	header {
@@ -42,8 +60,32 @@
 	padding: 0 30px;
 
 	#rating {
+		@media( max-width: 971px ) {
+			margin-top: -6px;
+		}
+		@media( max-width: 850px ) {
+			margin-top: -8px;
+		}
+		@media( max-width: 600px ) {
+			margin-top: -10px;
+		}
+		@media( max-width: 500px ) {
+			margin-top: -20px;
+		}
 		p {
 			font-size: 14px !important;
+			width: 90%;
+
+			@media( max-width: 500px ) {
+				font-size: 12px !important;
+			}
+		}
+		header {
+			h2 {
+				@media( max-width: 504px ) {
+					font-size: 16px;
+				}
+			}
 		}
 	}
 
@@ -61,6 +103,10 @@
 	font-size: 13px !important;
 	color: $darkGrey !important;
 	font-weight: 600 !important;
+
+	@media( max-width: 500px ) {
+		font-size: 11px !important;
+	}
 
 	span {
 		font-weight: 400 !important;
@@ -133,6 +179,10 @@
 				font-size: 14px !important;
 				color: $blue !important;
 				transition: color .5s !important;
+
+				@media( min-width: 972px ) {
+					float: right;
+				}
 
 				span {
 					border-bottom: 1px solid $borderA !important;
