--- a/pub/scss/base/_helpers.scss
+++ b/pub/scss/base/_helpers.scss
@@ -35,12 +35,16 @@
 	text-align: left !important;
 }
 
-.float-right {
-	float: right !important;
+.desktop {
+	@media( max-width: 971px ) {
+		display: none;
+	}
 }
 
-.float-left {
-	float: left !important;
+.mobile {
+	@media( min-width: 972px ) {
+		display: none;
+	}
 }
 
 .gradient {
