--- a/pub/scss/base/_helpers.scss
+++ b/pub/scss/base/_helpers.scss
@@ -23,6 +23,14 @@
 	padding-right: 15px !important;
 }
 
+.pl-30 {
+	padding-left: 30px !important;
+}
+
+.pr-30 {
+	padding-right: 30px !important;
+}
+
 .text-right {
 	text-align: right !important;
 }
