--- a/pub/scss/base/_globals.scss
+++ b/pub/scss/base/_globals.scss
@@ -94,6 +94,11 @@ img.aligncenter {
 			line-height: 30px !important;
 			color: $darkGrey !important;
 
+			@media( max-width: 500px ) {
+				font-size: 12px !important;
+				line-height: 20px !important;
+			}
+
 			&:before {
 				counter-increment: numList;
 				content: counter(numList);
@@ -110,6 +115,13 @@ img.aligncenter {
 				width: 30px;
 				height: 30px;
 				line-height: 32px;
+
+				@media( max-width: 500px ) {
+					font-size: 14px;
+					width: 20px;
+					height: 20px;
+					line-height: 20px;
+				}
 			}
 		}
 	}
