--- a/pub/scss/areas/_workout-card.scss
+++ b/pub/scss/areas/_workout-card.scss
@@ -91,7 +91,7 @@
 		}
 		p {
 			font-size: 14px !important;
-			width: 90%;
+			max-width: 198px;
 
 			@media( max-width: 500px ) {
 				font-size: 12px !important;
@@ -249,15 +249,15 @@
 
 .popup-wrap {
 	display: none;
+	position: relative;
 }
 
 .instruction-popup {
 	padding: 15px;
 	background: $blue;
-	width: 100%;
 
 	ul {
-		padding-left: 15px;
+		padding-left: 30px;
 		li {
 			font-size: 12px;
 			color: $white !important;
